--- a/server/package.json
+++ b/server/package.json
@@ -2,8 +2,8 @@
   "name": "mediasoup-demo-server",
   "version": "3.0.0",
   "private": true,
-  "description": "mediasoup demo server",
-  "author": "Iñaki Baz Castillo <ibc@aliax.net>",
+  "description": "Precisely Greet",
+  "author": "",
   "license": "All Rights Reserved",
   "main": "lib/index.js",
   "scripts": {
