--- a/app/package.json
+++ b/app/package.json
@@ -37,7 +37,9 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "riek": "^1.1.0",
-    "url-parse": "^1.4.7"
+    "url-parse": "^1.4.7",
+    "react-router-dom": "5.2.0",
+    "axios": "0.21.0"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
