--- a/app/package.json
+++ b/app/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@babel/runtime": "^7.8.4",
+    "axios": "0.21.0",
     "bowser": "^2.9.0",
     "classnames": "^2.2.6",
     "clipboard-copy": "^3.1.0",
@@ -30,16 +31,16 @@
     "react-draggable": "^3.3.2",
     "react-dropzone": "^10.2.1",
     "react-redux": "^7.2.0",
+    "react-router-dom": "5.2.0",
     "react-spinner": "^0.2.7",
     "react-tooltip": "^3.11.1",
     "react-transition-group": "^4.3.0",
+    "reactjs-popup": "^2.0.4",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "riek": "^1.1.0",
-    "url-parse": "^1.4.7",
-    "react-router-dom": "5.2.0",
-    "axios": "0.21.0"
+    "url-parse": "^1.4.7"
   },
   "devDependencies": {
     "@babel/core": "^7.8.4",
