Full Screen Functionality and changes in UI

--- a/aiortc/package.json
+++ b/aiortc/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "mediasoup-demo-aiortc",
+  "name": "precisely-demo-aiortc",
   "version": "3.0.0",
   "private": true,
-  "description": "mediasoup demo aiortc app",
+  "description": "precisely demo aiortc app",
   "contributors": [
     "Iñaki Baz Castillo <ibc@aliax.net> (https://inakibaz.me)",
     "José Luis Millán <jmillan@aliax.net> (https://github.com/jmillan)"
@@ -23,7 +23,7 @@
   "dependencies": {
     "debug": "^4.1.1",
     "fake-mediastreamtrack": "^1.1.3",
-    "mediasoup-client-aiortc": "github:versatica/mediasoup-client-aiortc#v3",
+    "precisely-client-aiortc": "github:versatica/precisely-client-aiortc#v3",
     "protoo-client": "^4.0.3",
     "redux": "^4.0.5",
     "redux-logger": "^3.0.6",
