--- a/app/package.json
+++ b/app/package.json
@@ -21,8 +21,8 @@
     "face-api.js": "^0.21.0",
     "hark": "^1.2.3",
     "js-cookie": "^2.2.1",
-    "precisely-client": "github:versatica/precisely-client#v3",
     "pokemon": "^2.0.2",
+    "mediasoup-client": "github:versatica/mediasoup-client#v3",
     "prop-types": "^15.7.2",
     "protoo-client": "^4.0.4",
     "random-string": "^0.2.0",
@@ -40,6 +40,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.3.0",
     "riek": "^1.1.0",
+    "sweetalert": "^2.1.2",
     "url-parse": "^1.4.7"
   },
   "devDependencies": {
