--- a/server/package.json
+++ b/server/package.json
@@ -2,7 +2,7 @@
   "name": "mediasoup-demo-server",
   "version": "3.0.0",
   "private": true,
-  "description": "Precisely Greet",
+  "description": "mediasoup Greet",
   "author": "",
   "license": "All Rights Reserved",
   "main": "lib/index.js",
