--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,8 @@
   },
   "dependencies": {
     "@sitespeed.io/throttle": "^0.5.4",
+    "@tensorflow/tfjs": "^3.2.0",
+    "@tensorflow/tfjs-core": "^3.2.0",
     "awaitqueue": "^2.1.1",
     "body-parser": "^1.19.0",
     "colors": "^1.4.0",
